--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,6 +510,92 @@
     "scores = cross_val_score(pipeline, X_train, y_train, scoring='f1_micro', cv=cv, n_jobs=-1)\n",
     "score = mean(scores)\n",
     "print(' F1 Score: %.3f' % score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Jelaskan bagaimana kalian akan menangani permasalahan yang disebutkan pada poin 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Pada data duplicate kami tidak perlu menangani apa-apa dikarenakan tidak terdapat data duplicate pada dataset\n",
+    "2. Pada missing value kami menanganinya dengan mengisi missing value dengan nilai mean dari instance-instance yang terdapat pada feature tersebut\n",
+    "3. Pada outlier kami mendeteksinya dengan menggunakan metode IQR (Inter Quartile Range) dan akan menghapus outlier-outlier tersebut\n",
+    "4. Pada Balance of Data kami tidak perlu menangani apa-apa dikarenakan data sudah cukup balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                     0\n",
+       "gender                 0\n",
+       "age                    0\n",
+       "hypertension           0\n",
+       "heart_disease          0\n",
+       "ever_married           0\n",
+       "work_type              0\n",
+       "Residence_type         0\n",
+       "avg_glucose_level      0\n",
+       "bmi                  130\n",
+       "smoking_status         0\n",
+       "stroke                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                   0\n",
+       "gender               0\n",
+       "age                  0\n",
+       "hypertension         0\n",
+       "heart_disease        0\n",
+       "ever_married         0\n",
+       "work_type            0\n",
+       "Residence_type       0\n",
+       "avg_glucose_level    0\n",
+       "bmi                  0\n",
+       "smoking_status       0\n",
+       "stroke               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Missing Value Handling\n",
+    "df_train['bmi'].fillna(df_train['bmi'].mean(), inplace= True)\n",
+    "df_test['bmi'].fillna(df_test['bmi'].mean(), inplace= True)\n",
+    "df_val['bmi'].fillna(df_val['bmi'].mean(), inplace= True)\n",
+    "\n",
+    "df_train.isna().sum()"
    ]
   },
   {
