--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -767,6 +767,225 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "7. Berdasarkan hasil prediksi yang kalian hasilkan, buatlah kesimpulan analisis karakteristik pasien yang terkena stroke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.17621241e-05 -2.16705433e-03  4.44544031e-02  1.93261650e-03\n",
+      "   1.68858375e-03 -1.07100679e-03 -1.60420874e-02 -2.61508086e-03\n",
+      "   2.40582032e-03 -1.49977854e-01 -6.90380742e-03]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train['ever_married'] = lb.fit_transform(X_train['ever_married'] )\n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train['work_type'] = lb.fit_transform(X_train['work_type'] )\n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train['work_type'] = lb.fit_transform(X_train['work_type'] )\n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train['Residence_type'] = lb.fit_transform(X_train['Residence_type'] )\n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train['smoking_status'] = lb.fit_transform(X_train['smoking_status'] )\n",
+      "C:\\Users\\joseg\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:6392: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return self._update_inplace(result)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>ever_married</th>\n",
+       "      <th>work_type</th>\n",
+       "      <th>Residence_type</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>smoking_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9046</td>\n",
+       "      <td>1</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>228.69</td>\n",
+       "      <td>36.600000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51676</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>202.21</td>\n",
+       "      <td>28.914618</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31112</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>105.92</td>\n",
+       "      <td>32.500000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60182</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>171.23</td>\n",
+       "      <td>34.400000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1665</td>\n",
+       "      <td>0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>174.12</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  gender   age  hypertension  heart_disease  ever_married  work_type  \\\n",
+       "0   9046       1  67.0             0              1             1          2   \n",
+       "1  51676       0  61.0             0              0             1          3   \n",
+       "2  31112       1  80.0             0              1             1          2   \n",
+       "3  60182       0  49.0             0              0             1          2   \n",
+       "4   1665       0  79.0             1              0             1          3   \n",
+       "\n",
+       "   Residence_type  avg_glucose_level        bmi  smoking_status  \n",
+       "0               1             228.69  36.600000               1  \n",
+       "1               0             202.21  28.914618               2  \n",
+       "2               0             105.92  32.500000               2  \n",
+       "3               1             171.23  34.400000               3  \n",
+       "4               0             174.12  24.000000               2  "
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LogisticRegression()\n",
+    "X_train['ever_married'] = lb.fit_transform(X_train['ever_married'] ) \n",
+    "\n",
+    "X_train['work_type'] = lb.fit_transform(X_train['work_type'] ) \n",
+    "\n",
+    "X_train['work_type'] = lb.fit_transform(X_train['work_type'] ) \n",
+    "\n",
+    "X_train['Residence_type'] = lb.fit_transform(X_train['Residence_type'] ) \n",
+    "\n",
+    "X_train['smoking_status'] = lb.fit_transform(X_train['smoking_status'] )\n",
+    "\n",
+    "X_train['bmi'].fillna(df_train['bmi'].mean(), inplace= True)\n",
+    "\n",
+    "model.fit(X_train,y_train)\n",
+    "print(model.coef_)\n",
+    "X_train.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Berdasarkan hasil dari coef_ maka karakteristik dari orang yang mengalami stroke adalah sudah berumur, mengalami hypertension, mengalami heart_disease, memiliki avg_glucose_level yang tinggi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Jelaskan pembagian tugas/ kerja antar anggota kelompok saat eksperimen,  pada sel ini."
    ]
   },
