add pembagian tugas

--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -998,7 +998,10 @@
     "2. Mengisi NaN value dengan mean\n",
     "3. Mengerjakan Desain Eksperimen\n",
     "\n",
-    "Muhammad Fahkry Malta"
+    "Muhammad Fahkry Malta\n",
+    "1. Menganalisa Duplicate Value, Missing Value, Outlier, dan Balance of Data\n",
+    "2. Membuat hasil analisis dari analisa diatas (nomor 3)\n",
+    "3. Membuat laporan"
    ]
   },
   {
