--- a/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
+++ b/1649020907823_IF3270_Praktikum/PraktikumIF3270_M1_13519022_13519032.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -788,31 +788,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/3541384694.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train['gender'] = lb.fit_transform(X_train['gender'] )\n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/3541384694.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_train['ever_married'] = lb.fit_transform(X_train['ever_married'] )\n",
-      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/3541384694.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_train['work_type'] = lb.fit_transform(X_train['work_type'] )\n",
-      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X_train['work_type'] = lb.fit_transform(X_train['work_type'] )\n",
-      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/3541384694.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_train['Residence_type'] = lb.fit_transform(X_train['Residence_type'] )\n",
-      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/825289690.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\joseg\\AppData\\Local\\Temp/ipykernel_7332/3541384694.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -950,16 +950,16 @@
        "4               0             174.12  24.000000               2  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = LogisticRegression()\n",
-    "X_train['ever_married'] = lb.fit_transform(X_train['ever_married'] ) \n",
+    "X_train['gender'] = lb.fit_transform(X_train['gender'] ) \n",
     "\n",
-    "X_train['work_type'] = lb.fit_transform(X_train['work_type'] ) \n",
+    "X_train['ever_married'] = lb.fit_transform(X_train['ever_married'] ) \n",
     "\n",
     "X_train['work_type'] = lb.fit_transform(X_train['work_type'] ) \n",
     "\n",
